--- a/hms-api/package.json
+++ b/hms-api/package.json
@@ -13,12 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-sdk": "2.7.0",
-    "@types/node": "^16.4.13",
-    "tslint": "^6.1.3",
-    "tslint-config-standard": "^9.0.0",
-    "typescript": "^4.3.5"
+    "@types/node": "16.4.13",
+    "tslint": "6.1.3",
+    "tslint-config-standard": "9.0.0",
+    "typescript": "4.3.5"
   },
   "dependencies": {
-    "uuid": "^8.3.2"
+    "uuid": "8.3.2"
   }
 }
