--- a/hms-api/package.json
+++ b/hms-api/package.json
@@ -14,11 +14,13 @@
   "devDependencies": {
     "@types/aws-sdk": "2.7.0",
     "@types/node": "17.0.21",
-    "tslint": "6.1.3",
-    "tslint-config-standard": "9.0.0",
+    "@typescript-eslint/eslint-plugin": "5.14.0",
+    "@typescript-eslint/parser": "5.14.0",
+    "eslint": "8.11.0",
+    "eslint-config-google": "0.14.0",
     "typescript": "4.6.2"
   },
   "dependencies": {
-    "uuid": "8.3.2"
+    "aws-sdk": "2.1092.0"
   }
 }
