--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^4.0.7",
+    "@mantine/form": "^4.0.7",
+    "@mantine/hooks": "^4.0.7",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
