--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
     "prettier": "^2.6.0"
   }
 }
