--- a/hms-api/package.json
+++ b/hms-api/package.json
@@ -2,6 +2,7 @@
   "name": "hms-api",
   "version": "0.0.0",
   "scripts": {
+    "test": "jest",
     "deploy": "serverless deploy --stage local",
     "watch": "nodemon -w src -e '.*' -x 'npm run build'",
     "start": "npm run deploy && npm run watch"
@@ -9,11 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-sdk": "2.7.0",
+    "@types/jest": "27.4.1",
     "@types/node": "17.0.23",
     "@typescript-eslint/eslint-plugin": "5.16.0",
     "@typescript-eslint/parser": "5.16.0",
     "eslint": "8.11.0",
     "eslint-config-google": "0.14.0",
+    "jest": "27.5.1",
     "nodemon": "2.0.15",
     "serverless-localstack": "0.4.35",
     "serverless-plugin-typescript": "2.1.1",
