--- a/hms-api/package.json
+++ b/hms-api/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "test": "jest",
+    "build": "",
     "deploy": "serverless deploy --stage local",
     "watch": "nodemon -w src -e '.*' -x 'npm run build'",
     "start": "npm run deploy && npm run watch"
