189 hackathon dynamo table

--- a/hms-api/package.json
+++ b/hms-api/package.json
@@ -9,7 +9,6 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@types/aws-sdk": "2.7.0",
     "@types/jest": "27.4.1",
     "@types/node": "17.0.23",
     "@typescript-eslint/eslint-plugin": "5.16.0",
@@ -25,6 +24,6 @@
     "uuid": "8.3.2"
   },
   "dependencies": {
-    "aws-sdk": "2.1100.0"
+    "@aws-sdk/client-dynamodb": "3.58.0"
   }
 }
