193 lowercase letters for booleans in serverless.yml

--- a/hms-api/serverless.yml
+++ b/hms-api/serverless.yml
@@ -6,13 +6,13 @@ plugins:
 
 custom:
   localstack:
-    debug: True
+    debug: true
     stages: [ local ]
-    autostart: True
+    autostart: true
     lambda:
-      mountCode: False
+      mountCode: false
     docker:
-      sudo: False
+      sudo: false
 
 provider:
   name: aws
