--- a/hms-api/serverless.yml
+++ b/hms-api/serverless.yml
@@ -22,6 +22,8 @@ provider:
     HACKATHON_TABLE_NAME: hackathon
     CATEGORY_TABLE_NAME: category
     CATEGORY_BY_HACKATHON_ID_INDEX_NAME: by-hackathonId
+    IDEA_TABLE_NAME: idea
+    IDEA_BY_HACKATHON_ID_INDEX_NAME: by-hackathonId
   iam:
     role:
       statements:
@@ -37,6 +39,8 @@ provider:
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.HACKATHON_TABLE_NAME}
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CATEGORY_TABLE_NAME}
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CATEGORY_TABLE_NAME}/index/*
+            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.IDEA_TABLE_NAME}
+            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.IDEA_TABLE_NAME}/index/*
 
 functions:
   createHackathon:
@@ -244,6 +248,30 @@ resources:
             KeyType: HASH
         GlobalSecondaryIndexes:
           - IndexName: ${self:provider.environment.CATEGORY_BY_HACKATHON_ID_INDEX_NAME}
+            KeySchema:
+              - AttributeName: hackathonId
+                KeyType: HASH
+              - AttributeName: id
+                KeyType: RANG
+            Projection:
+              ProjectionType: ALL
+
+    ideaTable:
+      Type: AWS::DynamoDB::Table
+      DeletionPolicy: Retain
+      Properties:
+        TableName: ${self:provider.environment.IDEA_TABLE_NAME}
+        BillingMode: PAY_PER_REQUEST
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+          - AttributeName: hackathonId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        GlobalSecondaryIndexes:
+          - IndexName: ${self:provider.environment.IDEA_BY_HACKATHON_ID_INDEX_NAME}
             KeySchema:
               - AttributeName: hackathonId
                 KeyType: HASH
