213 added Participant DynamoDB Table

--- a/hms-api/serverless.yml
+++ b/hms-api/serverless.yml
@@ -19,11 +19,13 @@ provider:
   runtime: nodejs14.x
   region: eu-central-1
   environment:
-    HACKATHON_TABLE_NAME: hackathon
-    CATEGORY_TABLE_NAME: category
-    CATEGORY_BY_HACKATHON_ID_INDEX_NAME: by-hackathonId
-    IDEA_TABLE_NAME: idea
-    IDEA_BY_HACKATHON_ID_INDEX_NAME: by-hackathonId
+    HACKATHON_TABLE: hackathon
+    CATEGORY_TABLE: category
+    CATEGORY_BY_HACKATHON_ID_INDEX: by-hackathonId
+    IDEA_TABLE: idea
+    IDEA_BY_HACKATHON_ID_INDEX: by-hackathonId
+    PARTICIPANT_TABLE: participant
+    PARTICIPANT_BY_HACKATHON_ID_INDEX: by-hackathonId
   iam:
     role:
       statements:
@@ -36,11 +38,13 @@ provider:
             - dynamodb:UpdateItem
             - dynamodb:DeleteItem
           Resource:
-            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.HACKATHON_TABLE_NAME}
-            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CATEGORY_TABLE_NAME}
-            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CATEGORY_TABLE_NAME}/index/*
-            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.IDEA_TABLE_NAME}
-            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.IDEA_TABLE_NAME}/index/*
+            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.HACKATHON_TABLE}
+            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CATEGORY_TABLE}
+            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CATEGORY_TABLE}/index/*
+            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.IDEA_TABLE}
+            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.IDEA_TABLE}/index/*
+            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.PARTICIPANT_TABLE}
+            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.PARTICIPANT_BY_HACKATHON_ID_INDEX}/index/*
 
 functions:
   createHackathon:
@@ -223,7 +227,7 @@ resources:
       Type: AWS::DynamoDB::Table
       DeletionPolicy: Retain
       Properties:
-        TableName: ${self:provider.environment.HACKATHON_TABLE_NAME}
+        TableName: ${self:provider.environment.HACKATHON_TABLE}
         BillingMode: PAY_PER_REQUEST
         AttributeDefinitions:
           - AttributeName: id
@@ -236,7 +240,7 @@ resources:
       Type: AWS::DynamoDB::Table
       DeletionPolicy: Retain
       Properties:
-        TableName: ${self:provider.environment.CATEGORY_TABLE_NAME}
+        TableName: ${self:provider.environment.CATEGORY_TABLE}
         BillingMode: PAY_PER_REQUEST
         AttributeDefinitions:
           - AttributeName: id
@@ -247,7 +251,7 @@ resources:
           - AttributeName: id
             KeyType: HASH
         GlobalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.CATEGORY_BY_HACKATHON_ID_INDEX_NAME}
+          - IndexName: ${self:provider.environment.CATEGORY_BY_HACKATHON_ID_INDEX}
             KeySchema:
               - AttributeName: hackathonId
                 KeyType: HASH
@@ -260,7 +264,7 @@ resources:
       Type: AWS::DynamoDB::Table
       DeletionPolicy: Retain
       Properties:
-        TableName: ${self:provider.environment.IDEA_TABLE_NAME}
+        TableName: ${self:provider.environment.IDEA_TABLE}
         BillingMode: PAY_PER_REQUEST
         AttributeDefinitions:
           - AttributeName: id
@@ -271,7 +275,31 @@ resources:
           - AttributeName: id
             KeyType: HASH
         GlobalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.IDEA_BY_HACKATHON_ID_INDEX_NAME}
+          - IndexName: ${self:provider.environment.IDEA_BY_HACKATHON_ID_INDEX}
+            KeySchema:
+              - AttributeName: hackathonId
+                KeyType: HASH
+              - AttributeName: id
+                KeyType: RANG
+            Projection:
+              ProjectionType: ALL
+
+    participantTable:
+      Type: AWS::DynamoDB::Table
+      DeletionPolicy: Retain
+      Properties:
+        TableName: ${self:provider.environment.PARTICIPANT_TABLE}
+        BillingMode: PAY_PER_REQUEST
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+          - AttributeName: hackathonId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        GlobalSecondaryIndexes:
+          - IndexName: ${self:provider.environment.PARTICIPANT_BY_HACKATHON_ID_INDEX}
             KeySchema:
               - AttributeName: hackathonId
                 KeyType: HASH
