--- a/hms-api/serverless.yml
+++ b/hms-api/serverless.yml
@@ -20,6 +20,7 @@ provider:
   region: eu-central-1
   environment:
     HACKATHON_TABLE: hackathon
+    USER_TABLE: user
     CATEGORY_TABLE: category
     CATEGORY_BY_HACKATHON_ID_INDEX: by-hackathonId
     IDEA_TABLE: idea
@@ -39,6 +40,7 @@ provider:
             - dynamodb:DeleteItem
           Resource:
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.HACKATHON_TABLE}
+            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.USER_TABLE}
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CATEGORY_TABLE}
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CATEGORY_TABLE}/index/*
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.IDEA_TABLE}
@@ -228,6 +230,19 @@ resources:
       DeletionPolicy: Retain
       Properties:
         TableName: ${self:provider.environment.HACKATHON_TABLE}
+        BillingMode: PAY_PER_REQUEST
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+
+    userTable:
+      Type: AWS::DynamoDB::Table
+      DeletionPolicy: Retain
+      Properties:
+        TableName: ${self:provider.environment.USER_TABLE}
         BillingMode: PAY_PER_REQUEST
         AttributeDefinitions:
           - AttributeName: id
